# belfem

./: .project  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.tar.xz  main.cpp
src/: CMakeLists.txt
src/comm/: CMakeLists.txt  cl_Communicator.cpp  cl_Communicator.hpp  comm_typedefs.hpp  commtools.cpp  commtools.hpp
src/containers/: CMakeLists.txt  cl_Bitset.hpp  cl_Cell.hpp  cl_DNA.hpp  cl_Map.hpp  cl_StringList.cpp  cl_StringList.hpp
src/core/: CMakeLists.txt  assert.hpp  banner.cpp  banner.hpp  cl_Arguments.cpp  cl_Arguments.hpp  cl_Logger.cpp  cl_Logger.hpp  cl_Profiler.cpp  cl_Profiler.hpp  cl_Progressbar.cpp  cl_Progressbar.hpp  cl_Timer.hpp  constants.hpp  fn_check_unit.hpp  fn_to_enum.hpp  random.hpp  stringtools.cpp  stringtools.hpp  typedefs.hpp  units.hpp
src/fem/: CMakeLists.txt
src/fem/bspline/: CMakeLists.txt  cl_BS_Basis.cpp  cl_BS_Basis.hpp  cl_BS_Element.cpp  cl_BS_Element.hpp  cl_BS_LookupTable.cpp  cl_BS_LookupTable.hpp  cl_BS_Mapper.cpp  cl_BS_Mapper.hpp  cl_BS_TMatrix.cpp  cl_BS_TMatrix.hpp  cl_GM_EoS_TableGas.cpp  cl_GM_EoS_TableGas.hpp  cl_TableGas.cpp  cl_TableGas.hpp  hotairtable.cpp  makehotair.cpp  makematdb.cpp  makematsp.cpp  rpa.cpp  stagnation.cpp
src/fem/edgeinterpolation/: CMakeLists.txt  cl_EF_EdgeFunction.hpp  cl_EF_LINE3.cpp  cl_EF_LINE3.hpp  cl_EF_TET10.cpp  cl_EF_TET10.hpp  cl_EF_TET4.cpp  cl_EF_TET4.hpp  cl_EF_TRI3.cpp  cl_EF_TRI3.hpp  cl_EF_TRI6.cpp  cl_EF_TRI6.hpp  cl_EF_TRI6_TS.cpp  cl_EF_TRI6_TS.hpp  cl_EdgeFunctionFactory.cpp  cl_EdgeFunctionFactory.hpp
src/fem/interpolation/: CMakeLists.txt  cl_IFB_LINE3.hpp  cl_IFB_TRI6.hpp  cl_IF_BEAM.hpp  cl_IF_HEX20.hpp  cl_IF_HEX27.hpp  cl_IF_HEX64.hpp  cl_IF_HEX8.hpp  cl_IF_IntegrationData.cpp  cl_IF_IntegrationData.hpp  cl_IF_InterpolationFunction.hpp  cl_IF_InterpolationFunctionFactory.cpp  cl_IF_InterpolationFunctionFactory.hpp  cl_IF_InterpolationFunctionTemplate.hpp  cl_IF_LINE2.hpp  cl_IF_LINE3.hpp  cl_IF_LINE4.hpp  cl_IF_LINE5.hpp  cl_IF_PENTA15.hpp  cl_IF_PENTA18.hpp  cl_IF_PENTA6.hpp  cl_IF_PLATE.hpp  cl_IF_QUAD16.hpp  cl_IF_QUAD4.hpp  cl_IF_QUAD8.hpp  cl_IF_QUAD9.hpp  cl_IF_TET10.hpp  cl_IF_TET20.hpp  cl_IF_TET35.hpp  cl_IF_TET4.hpp  cl_IF_TRI10.hpp  cl_IF_TRI15.hpp  cl_IF_TRI3.hpp  cl_IF_TRI6.hpp  cl_IF_TRUSS2.hpp  cl_IF_TRUSS3.hpp  cl_IF_TRUSS4.hpp  cl_IF_TRUSS5.hpp  fn_IF_initialize_integration_points.cpp  fn_IF_initialize_integration_points.hpp  (+5 more)
src/fem/iwg/: CMakeLists.txt  cl_IWG.cpp  cl_IWG.hpp  cl_IWG_2DGradient.cpp  cl_IWG_2DGradient.hpp  cl_IWG_PlaneStress.cpp  cl_IWG_SimpleDiffusion.hpp  cl_IWG_StaticHeatConduction.cpp  cl_IWG_StaticHeatConduction.hpp  cl_IWG_StationaryHeatConduction.cpp  cl_IWG_StationaryHeatConduction.hpp  cl_IWG_SurfaceGradient.cpp  cl_IWG_TATCAD.cpp  cl_IWG_Timestep.cpp  cl_IWG_Timestep.hpp  cl_IWG_TimestepOld.cpp  cl_IWG_TimestepOld.hpp  cl_IWG_TransientHeatConduction.cpp  cl_IWG_TransientHeatConduction.hpp  cl_IwgFactory.cpp  cl_IwgFactory.hpp  en_IWG_SideSetDofLinkMode.hpp  en_IWGs.hpp
src/fem/kernel/: CMakeLists.txt  FEM_geometry.cpp  FEM_geometry.hpp  FEM_geometrytools.cpp  FEM_geometrytools.hpp  cl_FEM_Bearing.cpp  cl_FEM_Bearing.hpp  cl_FEM_Block.cpp  cl_FEM_Block.hpp  cl_FEM_BoundaryCondition.cpp  (+61 more)
src/homology/: CMakeLists.txt  cl_BeltedTree.cpp  cl_BeltedTree.hpp  cl_Chain.cpp  cl_Chain.hpp  cl_Cochain.cpp  cl_Cochain.hpp  cl_Cohomology.cpp  cl_Cohomology.hpp  cl_Homology.cpp  cl_Homology.hpp  cl_SimplicialComplex.cpp  cl_SimplicialComplex.hpp  fn_Smith.cpp  fn_Smith.hpp
src/io/: CMakeLists.txt  HDF5_Tools.cpp  HDF5_Tools.hpp  cl_Ascii.cpp  cl_Ascii.hpp  cl_Database.cpp  cl_Database.hpp  cl_HDF5.cpp  cl_HDF5.hpp  cl_InputFile.cpp  cl_InputFile.hpp  cl_Input_Section.cpp  cl_Input_Section.hpp  cl_XML.cpp  cl_XML.hpp  filetools.cpp  filetools.hpp
src/lbl/: CMakeLists.txt  hphirun.cpp  ndlc_htest.cpp  ndlc_l2test.cpp  newmat.cpp  petsctst.cpp  surfacetest.cpp  testHomology.cpp  testHomology3D.cpp  test_brandt.cpp  test_curved.cpp  test_cut.cpp  test_dofmgr.cpp  test_e2ha.cpp  test_input.cpp  test_input_old.cpp  test_l2.cpp  test_n2ha.cpp  test_phiback.cpp  test_tape.cpp  test_tet10vis.cpp  tmesh.cpp
src/linalg/: cl_Matrix.hpp  cl_Vector.hpp  fn_cross.hpp  fn_crossmat.hpp  fn_det.hpp  fn_dot.hpp  fn_dpolyval.hpp  fn_eigen.hpp  fn_gesv.hpp  fn_inv.hpp  fn_inv2.hpp  fn_inv3.hpp  fn_linspace.hpp  fn_max.hpp  fn_min.hpp  fn_norm.hpp  fn_polyfit.hpp  fn_polyval.hpp  fn_r2.hpp  fn_reverse.hpp  fn_sort.hpp  fn_sum.hpp  fn_trans.hpp  fn_unique.hpp
src/math/: CMakeLists.txt
src/mesh/: CMakeLists.txt  Mesh_Enums.hpp  cl_Block.cpp  cl_Block.hpp  cl_Edge.cpp  cl_Edge.hpp  cl_EdgeFactory.cpp  cl_EdgeFactory.hpp  cl_Element.cpp  cl_Element.hpp  cl_ElementTemplate.hpp  cl_Element_Factory.cpp  cl_Element_Factory.hpp  cl_Element_HEX20.hpp  cl_Element_HEX27.hpp  cl_Element_HEX64.hpp  cl_Element_HEX8.hpp  cl_Element_LINE2.hpp  cl_Element_LINE3.hpp  cl_Element_LINE4.hpp  cl_Element_LINE5.hpp  cl_Element_PENTA15.hpp  cl_Element_PENTA18.hpp  cl_Element_PENTA6.hpp  cl_Element_QUAD16.hpp  cl_Element_QUAD4.hpp  cl_Element_QUAD8.hpp  cl_Element_QUAD9.hpp  cl_Element_TET10.hpp  cl_Element_TET4.hpp  cl_Element_TRI10.hpp  cl_Element_TRI15.hpp  cl_Element_TRI3.hpp  cl_Element_TRI6.hpp  cl_Element_Vertex.hpp  cl_Face.cpp  cl_Face.hpp  cl_FaceFactory.cpp  cl_FaceFactory.hpp  cl_Facet.cpp  (+57 more)
src/numerics/: CMakeLists.txt
src/physics/: CMakeLists.txt
src/sparse/: CMakeLists.txt  cl_Solver.cpp  cl_Solver.hpp  cl_SolverMUMPS.cpp  cl_SolverMUMPS.hpp  cl_SolverPARDISO.cpp  cl_SolverPARDISO.hpp  cl_SolverPETSC.cpp  cl_SolverPETSC.hpp  cl_SolverPetscDistributor.cpp  cl_SolverPetscDistributor.hpp  cl_SolverSTRUMPACK.cpp  cl_SolverSTRUMPACK.hpp  cl_SolverStrumpackDistributor.cpp  cl_SolverStrumpackDistributor.hpp  cl_SolverUMFPACK.cpp  cl_SolverUMFPACK.hpp  cl_SolverWrapper.cpp  cl_SolverWrapper.hpp  cl_SpMatrix.cpp  cl_SpMatrix.hpp  en_SolverEnums.cpp  en_SolverEnums.hpp  fn_rcond.cpp  fn_rcond.hpp  fspblas.hpp  mumpstools.f90  mumpstools.hpp  pardisotools.f90  pardisotools.hpp  petsctools.cpp  petsctools.hpp  solvertest.cpp  st_SolverPetscData.hpp
(+563 files in other folders)
